--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,7 +50,7 @@ header p {
   margin: 20px auto;
   color: var(--Grayish-Blue);
 }
-box1 {
+section {
   display: flex;
   gap: 30px;
   align-items: center;
@@ -106,7 +106,7 @@ article p {
   font-size: 15px;
 }
 
-.box2 {
+.team {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -126,7 +126,7 @@ article p {
   header p {
     width: 300px;
   }
-  box1 {
+  section {
     flex-direction: column;
   }
 }
@@ -142,7 +142,7 @@ article p {
   header p {
     width: 300px;
   }
-  box1 {
+  section {
     flex-direction: column;
   }
   article {
