--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,14 +60,14 @@ article {
   background-color: #fff;
   padding: 30px;
   width: 370px;
-  box-shadow: 6px 6px 10px 2px #ccc;
+  box-shadow: 12px 7px 20px 6px rgb(57 75 84 / 8%);
   border-radius: 10px;
   position: relative;
   overflow: hidden;
   transition: 0.5s;
 }
 article:hover {
-  box-shadow: 10px 10px 10px 2px #ccc;
+  box-shadow: 15px 10px 20px 6px rgb(57 75 84 / 8%);
 }
 article::before {
   content: "";
